Reporte terminado (Hay cosas para mejorar)